radioオブジェクトからRSSが生成されるように変更

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,12 @@
-  DATABASE_USER='root'
-  DATABASE_PASSWORD=''
-  DATABASE_HOST='localhost'
-  DATABASE_SOCKET='/tmp/mysql.sock'
+DATABASE_USER=root
+DATABASE_PASSWORD=
+DATABASE_HOST=localhost
+DATABASE_SOCKET=/tmp/mysql.sock
+
+EC2_PRODUCTION_HOST=52.199.95.54
+EC2_PRODUCTION_PROTOCOL=http
+
+S3_PRODUCTION_HOST=
+S3_PRODUCTION_PROTOCOL=
+
+SECRET_KEY_BASE=
