--- a/.env.sample
+++ b/.env.sample
@@ -9,4 +9,8 @@ EC2_PRODUCTION_PROTOCOL=http
 S3_PRODUCTION_HOST=
 S3_PRODUCTION_PROTOCOL=
 
+S3_ACCESS_KEY_ID=
+S3_SECRET_KEY_ID=
+S3_BUCKET_NAME=
+
 SECRET_KEY_BASE=
