staging用の設定いろいろ

--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,10 @@ test:
   <<: *default
   database: cho_kure_web_test
 
+staging:
+  <<: *default
+  database: cho_kure_web_staging
+
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
