--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "coffeescript": "1.12.7",
     "vue": "^2.5.9",
     "vue-loader": "^13.5.0",
