sitemapを生成できるようにした

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,10 @@ Naming/AccessorMethodName:
   Exclude:
     - "app/services/podcast/feed.rb"
 
+Rails:
+  Exclude:
+    - "config/sitemap.rb"
+
 Rails/OutputSafety:
   Exclude:
     - "app/helpers/markdown_helper.rb" # markdownをparseした結果を返すのにhtml_safeは必須
