--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vue-template-compiler": "^2.5.9"
   },
   "devDependencies": {
+    "eslint": "^4.13.0",
+    "eslint-plugin-vue": "^4.0.0-beta.2",
     "webpack-dev-server": "^2.9.7"
   }
 }
