--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,8 @@ AllCops:
   TargetRubyVersion: 2.4
   # uncomment if use rails cops
   TargetRailsVersion: 5.1
+  Exclude:
+    - "frontend/*.*"
 
 Style/GlobalVars:
   Exclude:
