--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "babel-loader": "^7.1.2",
     "coffeescript": "1.12.7",
     "postcss-loader": "^2.0.9",
-    "semantic-ui": "^2.2.13",
+    "semantic-ui-css": "^2.2.12",
     "vue": "^2.5.9",
     "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1",
