--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^7.1.2",
     "coffeescript": "^2.1.0",
     "vue": "^2.5.11",
+    "vue-axios": "^2.0.2",
     "vue-loader": "^13.6.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.11"
