--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "coffeescript": "^2.1.0",
+    "marked": "^0.3.9",
     "postcss-loader": "^2.0.9",
     "semantic-ui-css": "^2.2.12",
     "vue": "^2.5.11",
