--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "coffeescript": "^2.1.0",
+    "eslint-config-vue": "^2.0.2",
     "postcss-loader": "^2.0.9",
     "semantic-ui-css": "^2.2.12",
     "vue": "^2.5.11",
@@ -15,8 +16,8 @@
     "vue-template-compiler": "^2.5.11"
   },
   "devDependencies": {
-    "eslint": "^4.13.1",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint": "^4.14.0",
+    "eslint-plugin-vue": "^4.0.0-beta.4",
     "webpack-dev-server": "^2.9.7"
   }
 }
