--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "@rails/webpacker": "^3.1.1",
+    "array-includes": "^3.0.3",
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "coffeescript": "^2.1.0",
+    "es6-promise": "^4.2.2",
     "postcss-loader": "^2.0.9",
     "semantic-ui-css": "^2.2.12",
     "vue": "^2.5.11",
