--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "@rails/webpacker": "^3.1.1",
     "axios": "^0.17.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.3",
     "coffeescript": "^2.1.0",
     "eslint-config-vue": "^2.0.2",
     "postcss-loader": "^2.0.9",
@@ -16,6 +16,8 @@
     "vue-template-compiler": "^2.5.11"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.14.0",
     "eslint-plugin-vue": "^4.0.0-beta.4",
     "webpack-dev-server": "^2.9.7"
