podcast関連のUIテストを書いた
テストの文言修正

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,3 +49,7 @@ Rails:
 Rails/OutputSafety:
   Exclude:
     - "app/helpers/markdown_helper.rb" # markdownをparseした結果を返すのにhtml_safeは必須
+
+Capybara/FeatureMethods:
+  Exclude:
+    - "spec/features/**"
