--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,10 @@ jobs:
       - run: mv config/database.yml.ci config/database.yml
       - run: bundle exec rake db:create db:schema:load RAILS_ENV=test --trace
 
+      - run:
+        name: assets:precompile
+        command: bundle exec rails assets:precompile
+
       # run tests!
       - run:
           name: run tests
