add spec radio model

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,3 +49,6 @@ Rails:
 Rails/OutputSafety:
   Exclude:
     - "app/helpers/markdown_helper.rb" # markdownをparseした結果を返すのにhtml_safeは必須
+
+RSpec/ExampleLength:
+  Max: 20
