--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
-       - image: circleci/mysql
+       - image: circleci/mysql:8.0.2
          environment:
            MYSQL_USER: 'root'
            MYSQL_ROOT_PASSWORD: 'root'
