--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "repository": "git@github.com:kure-kosen/cho_kure_web.git",
   "author": "Shintani Teppei <teppest1215@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.10.2"
+  }
 }
