--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cho_kure_web",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:kure-kosen/cho_kure_web.git",
   "author": "Shintani Teppei <teppest1215@gmail.com>",
   "license": "MIT",
@@ -10,7 +10,8 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^4.10.2"
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4"
   },
   "dependencies": {
     "react": "^16.4.0",
