--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,18 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "awesome-typescript-loader": "^5.0.0",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "source-map-loader": "^0.2.3",
+    "typescript": "^2.9.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
   },
   "dependencies": {
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
   }
