--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.21.0",
     "typescript": "^2.9.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4"
@@ -19,6 +21,7 @@
   "dependencies": {
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
+    "milligram": "^1.3.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "styled-components": "^3.3.2"
