--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
+    "babel-polyfill": "^6.26.0",
     "milligram": "^1.3.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
