--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.0.5",
     "babel-polyfill": "^6.26.0",
     "milligram": "^1.3.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "styled-components": "^3.3.2"
