--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,7 +5,13 @@
     "module": "commonjs",
     "target": "es2017",
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
+    "newLine": "LF"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
