--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "commonjs",
     "target": "es2017",
     "jsx": "react",
+    "typeRoots": ["node_modules/@types", "src/typings"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
