--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
+    "@types/react-router-dom": "^4.2.7",
     "babel-polyfill": "^6.26.0",
     "file-loader": "^1.1.11",
     "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^3.3.2",
     "url-loader": "^1.0.1"
   }
