--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "style-loader": "^0.21.0",
     "typescript": "^2.9.1",
     "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "@types/react": "^16.3.16",
