--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.1",
     "styled-components": "^3.3.2",
     "url-loader": "^1.0.1"
   }
