--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.7",
+    "@types/react-slick": "^0.23.1",
     "babel-polyfill": "^6.26.0",
     "file-loader": "^1.1.11",
     "normalize.css": "^8.0.0",
