--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.1",
+    "react-twitter-widgets": "^1.7.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^3.3.2",
     "url-loader": "^1.0.1"
