--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "@types/react-slick": "^0.23.1",
     "babel-polyfill": "^6.26.0",
     "file-loader": "^1.1.11",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
