--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,4 +1,9 @@
 {
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "printWidth": 120,
+  "useTabs": false,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false
 }
