--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "npx webpack -w",
+    "build": "webpack --config ./config/webpack.config.prod.js",
+    "start": "webpack-dev-server --hot --config ./config/webpack.config.dev.js",
     "lint": "npx tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/react-router-dom": "^4.2.7",
     "@types/react-slick": "^0.23.1",
     "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^1.1.11",
     "normalize.css": "^8.0.0",
     "prettier": "^1.15.3",
@@ -41,6 +43,9 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.1.4"
   }
 }
