add build command for circleci frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,12 @@ jobs:
       - run: mv config/database.yml.ci config/database.yml
       - run: bundle exec rake db:create db:schema:load RAILS_ENV=test --trace
 
+      - run:
+          name: build frontend
+          working_directory: frontend
+          command: |
+            yarn build
+
       # run tests!
       - run:
           name: run tests
@@ -52,7 +58,7 @@ jobs:
             mkdir /tmp/test-results
 
             bundle exec rspec spec/ --format progress \
-                            --out /tmp/test-results/rspec.xml \
+                            --out ./tmp/test-results/rspec.xml \
                             --format progress \
 
       # collect reports
