--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.7",
     "@types/react-slick": "^0.23.1",
+    "@types/styled-components": "^4.1.6",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^1.0.0",
     "file-loader": "^1.1.11",
@@ -39,7 +40,7 @@
     "react-slick": "^0.23.1",
     "react-twitter-widgets": "^1.7.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^3.3.2",
+    "styled-components": "^4.1.3",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-plugin-prettier": "^2.0.1",
