--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-twitter-widgets": "^1.7.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^3.3.2",
+    "ts-loader": "^5.3.3",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-plugin-prettier": "^2.0.1",
