--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,7 @@ default: &default
   username: <%= ENV.fetch("DATABASE_USER") { "root" } %>
   password: <%= ENV.fetch("DATABASE_PASSWORD") { "" } %>
   socket: <%= ENV.fetch("DATABASE_SOCKET") { "/tmp/mysql.sock" } %>
+  host: <%= ENV.fetch("DATABASE_HOST") { "db" } %>
 
 development:
   <<: *default
