separate fixed env and variable env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,28 +21,9 @@ services:
       - "3000:3000"
     links:
       - "db"
+    env_file: .env
     environment:
       DATABASE_PASSWORD: root
       DATABASE_USER: root
       DATABASE_HOST: db
       DATABASE_SOCKET: /tmp/mysql.sock
-      EC2_PRODUCTION_HOST: 52.199.95.54
-      EC2_PRODUCTION_PROTOCOL: http
-  # frontend:
-  #   build:
-  #     context: .
-  #     dockerfile: ./docker/frontend/Dockerfile.local
-  #   command: echo "frontend command"
-  #   volumes:
-  #     - ./:/code
-  #   ports:
-  #     - "3000:3000"
-  #   links:
-  #     - "db"
-  #   environment:
-  #     DATABASE_PASSWORD: homepage
-  #     DATABASE_USER: homepage
-  #     DATABASE_HOST: db
-  #     DATABASE_SOCKET: /tmp/mysql.sock
-  #     EC2_PRODUCTION_HOST: 52.199.95.54
-  #     EC2_PRODUCTION_PROTOCOL: http
