--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "fork-ts-checker-webpack-plugin": "^1.3.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "typescript": "^2.9.1",
@@ -23,6 +24,8 @@
     "webpack-cli": "^2.1.4"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.7",
