--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,43 +12,42 @@
     "lint": "npx tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "fork-ts-checker-webpack-plugin": "^1.3.1",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.21.0",
-    "typescript": "^2.9.1",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.4"
-  },
-  "dependencies": {
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-typescript": "^7.3.3",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.7",
     "@types/react-slick": "^0.23.1",
-    "babel-polyfill": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "normalize.css": "^8.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.1",
     "prettier": "^1.15.3",
+    "style-loader": "^0.21.0",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^2.9.1",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.1.4"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
     "react-slick": "^0.23.1",
     "react-twitter-widgets": "^1.7.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^3.3.2",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "url-loader": "^1.0.1",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.1.4"
+    "styled-components": "^3.3.2"
   }
 }
