--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "ts-loader": "^5.3.3",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
+    "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^2.9.1",
     "url-loader": "^1.0.1",
