--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.7",
     "@types/react-slick": "^0.23.1",
+    "@types/styled-components": "^4.1.14",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
