--- a/frontend/.storybook/tsconfig.json
+++ b/frontend/.storybook/tsconfig.json
@@ -1,35 +1,44 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
-    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
     "module": "es2015",
-    "target": "es5",
+    "target": "es2018",
+    "jsx": "react",
+    "typeRoots": [
+      "node_modules/@types",
+      "src/typings"
+    ],
     "lib": [
       "es6",
       "dom"
     ],
-    "sourceMap": true,
+    "baseUrl": "./",
     "allowJs": false,
-    "jsx": "react",
-    "moduleResolution": "node",
     "rootDir": "../",
     "outDir": "dist",
+    "moduleResolution": "node",
+    "strict": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
-    "declaration": true
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "newLine": "LF"
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "build",
     "dist",
-    "scripts",
-    "acceptance-tests",
     "webpack",
     "jest",
-    "src/setupTests.ts",
-    "**/*/*.test.ts",
-    "examples"
+    "**/*/*.test.ts"
   ]
 }
