--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "babel-polyfill": "^6.26.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
+    "mobx-react-lite": "^1.3.2",
     "normalize.css": "^8.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
