--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.19.0-beta.1",
     "babel-polyfill": "^6.26.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
