--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^24.0.17",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
@@ -30,8 +31,10 @@
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "prettier": "^1.17.0",
     "style-loader": "^0.23.1",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.2",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
