--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "build": "webpack --color --progress --config ./config/webpack.config.prod.js",
     "dev": "webpack-dev-server --config ./config/webpack.config.dev.js",
     "start": "yarn dev",
-    "lint": "npx tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'"
+    "lint": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'",
+    "test": "jest --colors"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
