--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "dev": "webpack-dev-server --config ./config/webpack.config.dev.js",
     "start": "yarn dev",
     "lint": "tslint --fix -c ./tslint.json 'src/**/*{.ts,.tsx}'",
-    "test": "jest --colors"
+    "test": "jest --colors",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
@@ -20,12 +22,18 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@types/jest": "^24.0.17",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-slick": "^0.23.4",
     "@types/styled-components": "^4.1.15",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
