--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-slick": "^0.23.4",
+    "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.15",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
