--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,10 +9,7 @@
     "module": "es2015",
     "target": "es2018",
     "jsx": "react",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "typeRoots": ["node_modules/@types", "src/typings"],
     "strict": true,
     "strictNullChecks": true,
@@ -27,6 +24,6 @@
     "experimentalDecorators": true,
     "newLine": "LF"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "stories/**/*"],
   "exclude": ["node_modules"]
 }
