--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,14 +41,6 @@ jobs:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
 
-      # Frontend setup
-      - run:
-          name: build frontend
-          working_directory: frontend
-          command: |
-            yarn install
-            yarn build
-
       # Database setup
       - run: mv config/database.yml.ci config/database.yml
       - run: bundle exec rake db:create db:schema:load RAILS_ENV=test --trace
@@ -70,17 +62,34 @@ jobs:
           path: /tmp/test-results
           destination: test-results
 
-  frontend-test:
+  frontend-build:
     working_directory: ~/repo
     docker:
-      - image: circleci/node:12.8.1-browsers
+      - image: circleci/node:12.8.1
     steps:
       - checkout
       - run:
           name: Install test dependencies
           command: |
             cd frontend
-            yarn --frozen-lockfile --prefer-offline
+            yarn install --frozen-lockfile --prefer-offline
+      - run:
+          name: yarn test
+          command: |
+            cd frontend
+            yarn build
+
+  frontend-test:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:12.8.1
+    steps:
+      - checkout
+      - run:
+          name: Install test dependencies
+          command: |
+            cd frontend
+            yarn install --frozen-lockfile --prefer-offline
       - run:
           name: yarn test
           command: |
@@ -92,4 +101,5 @@ workflows:
   main:
     jobs:
       - build
+      - frontend-build
       - frontend-test
