--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,7 @@
     "target": "es2018",
     "jsx": "react",
     "lib": ["esnext", "dom"],
-    "typeRoots": ["node_modules/@types", "src/typings"],
+    "typeRoots": ["node_modules/@types", "src/typings/**"],
     "strict": true,
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
