--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-actions": "^5.2.1",
     "@storybook/addon-links": "^5.2.1",
     "@storybook/addon-storyshots": "^5.2.1",
+    "@storybook/addon-storyshots-puppeteer": "^5.2.1",
     "@storybook/addon-viewport": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
@@ -39,6 +40,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-slick": "^0.23.4",
+    "@types/storybook__addon-storyshots-puppeteer": "^5.1.0",
     "@types/styled-components": "^4.1.15",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -51,6 +53,7 @@
     "fork-ts-checker-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^1.17.0",
     "react-docgen-typescript-loader": "^3.2.1",
     "react-test-renderer": "^16.9.0",
