--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.0",
     "react-slick": "^0.24.0",
     "react-twitter-widgets": "^1.7.1",
