--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,12 @@
     "@storybook/addons": "^5.2.1",
     "@storybook/react": "^5.2.1",
     "@types/jest": "^24.0.18",
+    "@types/lodash.camelcase": "^4.3.6",
+    "@types/lodash.isarray": "^4.0.6",
+    "@types/lodash.isobject": "^3.0.6",
+    "@types/lodash.mapkeys": "^4.6.6",
+    "@types/lodash.mapvalues": "^4.6.6",
+    "@types/lodash.snakecase": "^4.1.6",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.3",
@@ -74,6 +80,12 @@
   },
   "dependencies": {
     "axios": "0.19.0-beta.1",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.isarray": "^4.0.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.mapkeys": "^4.6.0",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.snakecase": "^4.1.1",
     "mobx": "^5.9.4",
     "mobx-react-lite": "^1.3.2",
     "normalize.css": "^8.0.0",
