--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "@types/lodash.snakecase": "^4.1.6",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@types/react-responsive": "^8.0.1",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-slick": "^0.23.4",
     "@types/storybook__addon-storyshots-puppeteer": "^5.1.0",
@@ -92,6 +93,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.0.0",
     "react-slick": "^0.24.0",
     "react-twitter-widgets": "^1.7.1",
