--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,7 @@
     "@types/lodash.snakecase": "^4.1.6",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-dom": "^5.1.2",
     "@types/react-slick": "^0.23.4",
     "@types/storybook__addon-storyshots-puppeteer": "^5.1.0",
     "@types/styled-components": "^4.1.15",
@@ -92,7 +92,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "5.1.2",
     "react-slick": "^0.24.0",
     "react-twitter-widgets": "^1.7.1",
     "slick-carousel": "^1.8.1",
