--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@types/react-slick": "^0.23.4",
     "@types/storybook__addon-storyshots-puppeteer": "^5.1.0",
     "@types/styled-components": "^4.1.15",
+    "axios-mock-adapter": "^1.17.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-require-context-hook": "^1.0.0",
