--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "es2015",
+    "module": "esnext",
     "target": "es2018",
     "jsx": "react",
     "lib": ["esnext", "dom"],
