add some env and dotenv-webpack

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,6 @@ SECRET_KEY_BASE=
 GMAIL_PASSWORD=
 
 USE_WEBPACK_DEV_SERVER=TRUE
+NODE_ENV=production
+USE_IP_ADDRESS=false
+FRONTEND_IP_ADDRESS=192.168.1.2
